k8s/davis/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: davis
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: davis
