k8s/davis/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: davis
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`calendars.kevingomez.fr`)
      services:
        - kind: Service
          name: davis
          port: http
  tls:
    secretName: davis-cert
